--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a id="forkme_banner" href="https://github.com/RatBoyJim/tamagotchi_towers">View on GitHub</a>
     <img src="./src/gifs/penguin/penguin_heart.gif" alt="an image of an 8 bit style penguin">
   </header>
-  <body>
+  <body class="body_style">
       <div class="subheading">
         <h2>Info about the Tamagotchi Towers project</h2>
         <p>Group Project | JavaScript - React - Java Spring | February 2021</p>
